# langis-api

./: .env  .env.test  Cargo.toml  README.md
migrations/2020-03-07-084704_create_users/: up.sql
migrations/2020-03-15-023628_create_sessions/: up.sql
migrations/2020-03-17-215059_create_sources/: down.sql  up.sql
migrations/2020-03-17-215358_create_word_entries/: down.sql  up.sql
migrations/2020-03-17-215358_create_word_translations/: down.sql  up.sql
migrations/2020-04-02-004616_create_notes_and_tags/: down.sql  up.sql
migrations/2020-04-30-032934_create_word_entry_readings/: down.sql  up.sql
src/: auth_handler.rs  database.rs  edict_helpers.rs  errors.rs  lib.rs  main.rs  models.rs  register_handler.rs  schema.rs  security.rs  tool_helpers.rs
src/app/: config.rs  database.rs  errors.rs  identity.rs  mod.rs  routes.rs  security.rs
src/app/controllers/: auth_controller.rs  mod.rs  word_entries_controller.rs
src/app/middleware/: auth_middleware.rs
src/app/models/: mod.rs  session.rs  source.rs  word_entry.rs  word_entry_group.rs  word_entry_note.rs  word_entry_reading.rs  word_entry_tag.rs
src/helpers/: edict_helpers.rs  mod.rs  tool_helpers.rs
src/tests/: auth_controller_tests.rs  mod.rs  test_helpers.rs  word_entries_controller_tests.rs
src/tools/: import_edict.rs  import_freedict_tei.rs
tools/: import_freedict.rs
