[package]
name = "langis"
version = "0.0.1"
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
argonautica = "0.2.0"
bytes = "0.5.4"
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "^1.4.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.4"
lazy_static = "1.4.0"
rand = "0.7.3"
r2d2 = "0.8.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
actix-identity = "0.2.1"
derive_more = "0.99.3"
