[package]
name = "langis"
version = "0.0.1"
edition = "2018"
default-run = "main"

[dependencies]
actix-http = "1.0.1"
actix-identity = "0.2.1"
actix-rt = "1.0.0"
actix-service = "1.0.5"
actix-web = "2.0.0"
argonautica = "0.2.0"
bytes = "0.5.4"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.3"
diesel = { version = "^1.4.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.4"
lazy_static = "1.4.0"
quick-xml = "0.17.2"
rand = "0.7.3"
regex = "1.3.5"
r2d2 = "0.8.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
itertools = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "import-edict"
path = "src/tools/import_edict.rs"

[[bin]]
name = "import-freedict-tei"
path = "src/tools/import_freedict_tei.rs"
